@@ -29,10 +29,12 @@ export default Ember.Component.extend({
         startPos = processor.timeToPositionPercent(this.get("process.startEvent.time")),
         endPos = processor.timeToPositionPercent(this.get("process.endEvent.time"));
 
-    this.$(".process-line").css({
-      left: startPos + "%",
-      right: (100 - endPos) + "%",
-      "background-color": this.get("process").getColor()
+    Ember.run.later(this, function () {
+      this.$(".process-line").css({
+        left: startPos + "%",
+        right: (100 - endPos) + "%",
+        "background-color": this.get("process").getColor()
+      });
     });
   }),
 
