@@ -10,6 +10,7 @@ INCOMPATIBLE CHANGES
   TEZ-3199. Rename getCredentials in TaskCommunicatorContext to be less confusing.
 
 ALL CHANGES:
+  TEZ-3194. Tez UI: Swimlane improve in-progress experience.
   TEZ-3196. java.lang.InternalError from decompression codec is fatal to a task during shuffle
   TEZ-3161. Allow task to report different kinds of errors - fatal / kill.
   TEZ-3177. Non-DAG events should use the session domain or no domain if the data does not need protection.
